# jarvis

./: .gitignore  BUILD_JARVIS.bat  CONTINUE.md  RUN_JARVIS_LOG.bat  pyproject.toml  시작하기-윈도우.txt  클로드코드-이어하기.txt
.github/workflows/: ci.yml
docs/: CAPABILITIES.md  PACKAGING.md  REMOTE.md  WINDOWS_VOICE.md  사용설명서.md
docs/superpowers/plans/: 2026-06-09-jarvis-m1-voice-loop-skeleton.md  2026-06-09-jarvis-m2-jarvis-voice-and-training.md  2026-06-09-jarvis-m3-tools-and-mcp.md  2026-06-10-jarvis-voice-dropin.md  2026-06-10-proactive-jarvis.md  2026-06-10-wake-word.md  2026-06-11-action-pack.md  2026-06-11-info-pack.md  2026-06-11-iphone-remote.md  2026-06-11-screen-vision.md  2026-06-11-speed-tuning.md  2026-06-14-hud-orb-redesign.md  2026-06-14-hud-panel-workshop-redesign.md  2026-06-19-jarvis-agentic-substrate.md
docs/superpowers/specs/: 2026-06-09-jarvis-voice-assistant-design.md  2026-06-10-proactive-jarvis-design.md  2026-06-10-wake-word-design.md  2026-06-11-action-pack-design.md  2026-06-11-conversation-memory-design.md  2026-06-11-info-pack-design.md  2026-06-11-iphone-remote-design.md  2026-06-11-outbound-send-design.md  2026-06-11-screen-vision-design.md  2026-06-11-speed-tuning-design.md  2026-06-11-trust-mode-design.md  2026-06-12-brain-abstraction-design.md  jarvis-hud-movie-references.md  (+8 more)
jarvis/: __main__.py
jarvis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
jarvis/activation/: ask_hotkey.py  base.py  ptt.py
jarvis/audio/: capture.py  micstream.py  playback.py  util.py  utterance.py  vad.py  wake.py
jarvis/brain/: base.py  claude.py  codex_auth.py  consult.py  ensemble.py  factory.py  gating.py  gemini.py  history.py  longmem.py  memory.py  openai_brain.py  persona.py  persona_ko.md  sentence.py  subscription.py  tool_policy.py  usage.py
jarvis/core/: bgtasks.py  config.py  control_gate.py  events.py  interpret.py  orchestrator.py  permissions.py  platform_defaults.py  selfcheck.py  voice_full.py
jarvis/hud/: __init__.py  ask.html  ask_overlay.py  level.py  notice_bus.py  orb.html  orb_server.py  overlay_mac.py  overlay_win.py  procwatch.py  telemetry.py  tray.py
jarvis/proactive/: engine.py  events.py  monitors.py  sources.py  timers.py
jarvis/remote/: server.py  token.py
jarvis/setup/: __init__.py  __main__.py  launcher.py  login.py  server.py  shortcut.py  store.py  validate.py
jarvis/stt/: base.py  factory.py  faster_whisper_stt.py  mlx_whisper.py
jarvis/tools/: __init__.py  confirm.py  external_mcp.py  jarvis_mcp.py  mcp_client.py  plugins.py  registry.py  skills.py  skillsmith.py  webdrive.py  win_control.py
jarvis/tts/: base.py  composite.py  edge_tts_backend.py  factory.py  ipc.py  melotts_kr.py  pocket_tts.py  pocket_worker.py  system_sapi.py  system_say.py  tts_worker.py  xtts_kr.py  xtts_worker.py
jarvis/vc/: assets.py  base.py  factory.py  null_vc.py  onnx_rvc.py  resolve.py  rvc.py  rvc_infer_cli.py  rvc_persistent.py  rvc_worker.py
packaging/: build_mac.sh  build_win.ps1  desymlink_hf.py  extract_hf_tar.py  icon_gen.py  jarvis.icns  jarvis.spec  jarvis_launch.py  upgrade_full_voice.ps1  upgrade_full_voice.sh  자비스-제거.bat  자비스-제거.command
scripts/: com.jarvis.assistant.plist  manual_tool_check.py  run.sh
tests/: conftest.py  test_brain.py  test_capture.py  test_config.py  test_events.py  test_main_wiring.py  test_memory.py  test_null_vc.py  test_orchestrator.py  test_persona.py  test_playback.py  test_ptt.py  test_scaffold.py  test_sentence.py  test_stt.py  test_system_say.py  test_util.py  test_win_boot.py
tests/activation/: test_ask_hotkey.py
tests/audio/: test_micstream.py  test_utterance.py  test_vad.py  test_wake_listener.py  test_wake_match.py
tests/brain/: test_base.py  test_brain_factory.py  test_brain_tools.py  test_can_use_tool.py  test_codex_auth.py  test_consult.py  test_ensemble.py  test_factory.py  test_gating.py  test_gemini.py  test_history.py  test_longmem.py  test_now_stamp.py  test_openai_brain.py  test_openai_subscription.py  test_subscription.py  test_tool_policy.py  test_usage.py
tests/core/: test_bgtasks.py  test_config_m2.py  test_control_gate.py  test_interpret.py  test_permissions.py  test_platform_defaults.py  test_selfcheck.py  test_trust_gate.py  test_voice_full.py
tests/hud/: test_level.py  test_notice_bus.py  test_orb_server.py  test_overlay_and_tray.py  test_procwatch.py  test_telemetry.py
tests/integration/: test_speak_rvc_dropin.py  test_tool_gating.py
tests/proactive/: test_engine.py  test_events.py  test_monitors.py  test_sources.py  test_timers.py
tests/remote/: test_server.py  test_token.py
tests/setup/: test_launcher.py  test_login.py  test_main_wiring.py  test_server.py  test_settings_provider.py  test_setup_html_js.py  test_shortcut.py  test_store.py  test_upgrade.py  test_validate.py  test_voice_name.py
tests/stt/: test_factory.py  test_faster_whisper.py
tests/tools/: test_confirm.py  test_control_mode_tool.py  test_jarvis_mcp.py  test_local_tools.py  test_mcp_client.py  test_plugins.py  test_registry.py  test_screen.py  test_screen_guard.py  test_send.py  test_skills.py  test_skillsmith.py  test_time_weather.py  test_ui_click.py  test_voice_status.py  test_web_search.py  test_webdrive.py  test_win_control.py
tests/tts/: fake_worker.py  test_composite.py  test_edge_tts.py  test_factory.py  test_factory_edge.py  test_ipc.py  test_melotts_kr.py  test_pocket_split.py  test_pocket_tts.py  test_system_sapi.py  test_tts_worker.py  test_xtts_kr.py
tests/vc/: test_assets.py  test_factory.py  test_factory_onnx.py  test_hubert_transformers.py  test_onnx_rvc.py  test_resolve.py  test_rvc.py  test_rvc_persistent.py
tests/voice_training/: test_build_dataset.py  test_clean.py  test_fetch.py  test_resample.py  test_segment.py  test_separate.py
voice_models/: README.md
voice_training/: README.md  build_dataset.py  clean.py  fetch.py  make_train_colab_nb.py  patch_fairseq.py  patch_melotts.py  resample.py  sample_rvc.sh  segment.py  separate.py  setup_pocket.sh  setup_rvc.sh  setup_rvc_win.ps1  setup_xtts.sh  train_applio_local.sh  train_colab.ipynb  urls.example.txt
(+7 files in other folders)
