# JARVIS Korean voice assistant — local, macOS Apple Silicon (M4 Pro 24GB).
# TWO-VENV LAYOUT (do NOT mix):
#   main venv  -> .venv       : everything in this pyproject
#   tts  venv  -> .venv-tts   : MeloTTS + python-mecab-ko + pinned torch (M2 only; never imported here)
# Bootstrap main venv:
#   python3.11 -m venv .venv && . .venv/bin/activate && pip install -e ".[dev]"
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic[mcp]==0.107.1",
    "mcp==1.27.1",
    "mlx-whisper==0.4.3",
    "mlx==0.30.0",
    "sounddevice==0.5.5",
    "pynput==1.7.7",
    "numpy==2.1.3",
    "soxr==0.5.0.post1",
    "pydantic>=2.11.0,<3",
    "pydantic-settings>=2.6.1,<3",
    "keyring==25.5.0",
    "onnxruntime>=1.20,<2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "ruff==0.7.4"]
gemini = ["google-genai>=2.8,<3"]
# [voice] (M2 install: pip install -e ".[voice]") — RVC voice path + audio cleanup.
voice = [
    "soundfile==0.13.1",
    "noisereduce==3.0.3",
    "faiss-cpu>=1.7.2",
    "audio-separator[cpu]==0.44.2",  # [cpu] pulls onnxruntime (CoreMLExecutionProvider on arm64)
]
# RVC inference CLI (`mlx-rvc`) is NOT on PyPI. Install it separately only when
# wiring a TRAINED model (downstream of Colab training):
#   uv pip install git+https://github.com/lextoumbourou/mlx-rvc
# (or the PyTorch-MPS macOS fork NevilPatel01/RVC-WebUI-MacOS). RVCConversion
# shells out to the `mlx-rvc` CLI, so it need not be importable in this venv.
# [training] — dataset prep for the Colab RVC training notebook (M2 spec 8.4).
training = ["yt-dlp", "demucs"]
# [hud] — native macOS overlay window for the JARVIS HUD (transparent WKWebView).
# Without it the HUD still runs; use hud_open_browser=True or open the URL manually.
hud = ["pyobjc-framework-Cocoa>=10.1", "pyobjc-framework-WebKit>=10.1"]
# XTTS-v2 voice clone runtime lives in an ISOLATED .venv-xtts (pins torch/transformers),
# never the main venv. Bootstrap: voice_training/setup_xtts.sh. For reference only:
#   coqui-tts[codec] torch torchaudio torchcodec "transformers>=4.40,<5"

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode: path-based module identity so same-basename test files
# (tests/tts/test_factory.py & tests/vc/test_factory.py) don't collide.
addopts = "-q --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
