# JARVIS Korean voice assistant — local, macOS Apple Silicon (M4 Pro 24GB).
# TWO-VENV LAYOUT (do NOT mix):
#   main venv  -> .venv       : everything in this pyproject
#   tts  venv  -> .venv-tts   : MeloTTS + python-mecab-ko + pinned torch (M2 only; never imported here)
# Bootstrap main venv:
#   python3.11 -m venv .venv && . .venv/bin/activate && pip install -e ".[dev]"
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "4.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic[mcp]==0.107.1",
    "mcp==1.27.1",
    "claude-agent-sdk==0.2.94",          # 구독 두뇌(Claude Pro/Max 로그인, node CLI 번들)
    # mlx STT는 맥 애플 실리콘 전용 — 윈도우/리눅스 휠이 없어 조건부(없으면 pip 설치 실패)
    "mlx-whisper==0.4.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx==0.30.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # 크로스플랫폼 STT(비-맥 기본) — CTranslate2 기반 faster-whisper
    "faster-whisper>=1.0; sys_platform != 'darwin'",
    # 두뇌 프로바이더 SDK — 배포판이 Claude/Gemini/GPT 셋 다 지원하도록 메인 포함
    "google-genai>=2.8,<3",
    "openai>=2.0,<3",
    "huggingface_hub>=0.20",             # RVC 공개 자산·모델 다운로드
    "sounddevice==0.5.5",
    "pynput==1.7.7",
    "tzdata; sys_platform == 'win32'",
    "psutil>=5.9",  # 크로스플랫폼 배터리 감시(PsutilBatteryMonitor)  # 윈도우엔 시스템 tz DB가 없다 — ZoneInfo 필수
    "numpy==2.1.3",
    "soxr==0.5.0.post1",
    "pydantic>=2.11.0,<3",
    "pydantic-settings>=2.6.1,<3",
    "keyring==25.5.0",
    "onnxruntime>=1.20,<2",
    "pyworld>=0.3",
    "librosa>=0.10",
    "edge-tts>=6.1",
    "soundfile>=0.12",
    "pyautogui>=0.9.54",
    "mss>=9.0",
    # 상태 아이콘(맥 메뉴 막대 / 윈도우 트레이) — pystray + Pillow(아이콘 렌더)
    "pystray>=0.19",
    "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest==8.3.3", "ruff==0.7.4"]
gemini = ["google-genai>=2.8,<3"]
gpt = ["openai>=2.0,<3"]
# [voice] (M2 install: pip install -e ".[voice]") — RVC voice path + audio cleanup.
voice = [
    # soundfile is now a main dependency (needed by EdgeTTS cross-platform backend)
    "noisereduce==3.0.3",
    "faiss-cpu>=1.7.2",
    "audio-separator[cpu]==0.44.2",  # [cpu] pulls onnxruntime (CoreMLExecutionProvider on arm64)
]
# RVC inference CLI (`mlx-rvc`) is NOT on PyPI. Install it separately only when
# wiring a TRAINED model (downstream of Colab training):
#   uv pip install git+https://github.com/lextoumbourou/mlx-rvc
# (or the PyTorch-MPS macOS fork NevilPatel01/RVC-WebUI-MacOS). RVCConversion
# shells out to the `mlx-rvc` CLI, so it need not be importable in this venv.
# [training] — dataset prep for the Colab RVC training notebook (M2 spec 8.4).
training = ["yt-dlp", "demucs"]
# [hud] — native macOS overlay window for the JARVIS HUD (transparent WKWebView).
# Without it the HUD still runs; use hud_open_browser=True or open the URL manually.
hud = [
    "pyobjc-framework-Cocoa>=10.1; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=10.1; sys_platform == 'darwin'",
]
# [winhud] — 진짜 투명 풀스크린 윈도우 오버레이(pywebview). 없어도 overlay_win이
# Edge 앱 모드(탭 없는 전용 창)로 폴백하므로 윈도우 HUD는 무설치로도 동작한다.
winhud = ["pywebview>=5.0; sys_platform == 'win32'"]
# XTTS-v2 voice clone runtime lives in an ISOLATED .venv-xtts (pins torch/transformers),
# never the main venv. Bootstrap: voice_training/setup_xtts.sh. For reference only:
#   coqui-tts[codec] torch torchaudio torchcodec "transformers>=4.40,<5"

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode: path-based module identity so same-basename test files
# (tests/tts/test_factory.py & tests/vc/test_factory.py) don't collide.
addopts = "-q --import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
